--- a/package.json
+++ b/package.json
@@ -8,8 +8,26 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/react": "^1.6.22",
+    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/typography": "^0.3.1",
+    "algoliasearch": "^4.8.3",
+    "autoprefixer": "^10.1.0",
+    "html-react-parser": "^1.0.0",
+    "luxon": "^1.25.0",
     "next": "10.0.3",
+    "next-mdx-remote": "^1.0.1",
+    "postcss": "^8.2.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-instantsearch-dom": "^6.8.2",
+    "styled-components": "^5.2.1",
+    "tailwindcss": "^2.0.2",
+    "twin.macro": "^2.0.7"
+  },
+  "babelMacros": {
+    "twin": {
+      "preset": "styled-components"
+    }
   }
 }
