--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-instantsearch-dom": "^6.8.2",
+    "react-mailchimp-form": "^1.0.2",
     "styled-components": "^5.2.1",
     "tailwindcss": "^2.0.2",
     "twin.macro": "^2.0.7"
