--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/typography": "^0.3.1",
     "algoliasearch": "^4.8.3",
     "autoprefixer": "^10.1.0",
+    "gray-matter": "^4.0.2",
     "html-react-parser": "^1.0.0",
     "luxon": "^1.25.0",
     "next": "10.0.3",
@@ -22,6 +23,8 @@
     "react-dom": "17.0.1",
     "react-instantsearch-dom": "^6.8.2",
     "react-mailchimp-form": "^1.0.2",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1",
     "styled-components": "^5.2.1",
     "tailwindcss": "^2.0.2",
     "twin.macro": "^2.0.7"
