--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "IS_BUILD=true next build",
     "start": "next start"
   },
   "dependencies": {
@@ -13,14 +13,15 @@
     "@tailwindcss/typography": "^0.3.1",
     "algoliasearch": "^4.8.3",
     "autoprefixer": "^10.4.2",
+    "eslint-config-next": "^13.0.0",
     "gray-matter": "^4.0.2",
     "html-react-parser": "^1.0.0",
     "luxon": "^1.25.0",
-    "next": "10.0.3",
-    "next-mdx-remote": "^1.0.1",
+    "next": "^13.0.5",
+    "next-mdx-remote": "^4.2.0",
     "postcss": "^8.4.5",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-instantsearch-dom": "^6.8.2",
     "react-mailchimp-form": "^1.0.2",
     "remark": "^13.0.0",
@@ -29,6 +30,11 @@
     "styled-components": "^5.2.1",
     "tailwindcss": "^2.2.19",
     "twin.macro": "^2.8.2"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   },
   "babelMacros": {
     "twin": {
