--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "striptags": "^3.1.1",
     "styled-components": "^5.3.6",
     "tailwindcss": "^3.2.4",
-    "twin.macro": "^3.0.1"
+    "twin.macro": "^3.0.1",
+    "unified": "^10.1.2"
   },
   "browser": {
     "fs": false,
